plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'at.fhv'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Publication Organizer Application'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// Compiler-Parameter für Parameter-Namen (wichtig für Spring Security)
tasks.withType(JavaCompile) {
    options.compilerArgs += ['-parameters']
}



repositories {
    mavenCentral()
    maven { url = 'https://repo.spring.io/snapshot' }
}

jacoco {
    toolVersion = "0.8.11"
}

test {
    useJUnitPlatform()
    finalizedBy(tasks.jacocoTestReport)
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

dependencies {
    implementation 'org.flywaydb:flyway-core:11.7.2'
    implementation 'org.flywaydb:flyway-database-postgresql:11.7.2'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // --- SECURITY DEPENDENCIES ---
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    runtimeOnly 'org.postgresql:postgresql'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.junit.jupiter:junit-jupiter:5.11.0"
    testImplementation "org.junit.platform:junit-platform-suite:1.14.0"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.h2database:h2'
    implementation 'com.cloudinary:cloudinary-http44:1.38.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'

}